# HevcPlayerPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql.yml
conf/: config.json
docs/: 接口文档.md
htdocs/player/: index.html
htdocs/player/js/: layout.js  pcm.js  webgl.js  websocket.js  yuv.js
htdocs/player/styles/: style.css
scripts/package/: setup.iss
src/: config.cpp  config.h  dump.h  error.cpp  error.h  ffmpegWrapper.cpp  ffmpegWrapper.h  log.cpp  log.h  main.cpp  packetQueue.cpp  packetQueue.h  signalSession.cpp  signalSession.h  version.h  webSocketServer.cpp  webSocketServer.h
